--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,6 @@ typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
-weasyprint==66.0
+#weasyprint==66.0
 webencodings==0.5.1
 zopfli==0.2.3.post1
